--- a/README.org
+++ b/README.org
@@ -5,5 +5,5 @@ A compatible re-implementation of the BibTeX program in Common Lisp, with a BST-
 |---------+----------------------------------------------|
 | source  | git:https://github.com/mkoeppe/cl-bibtex.git |
 | commit  | 17a16f5                                      |
-| systems | (bibtex)                                     |
+| systems | bibtex                                       |
 |---------+----------------------------------------------|
