--- a/README.org
+++ b/README.org
@@ -1,9 +1,10 @@
 * cl-bibtex
 
-A compatible re-implementation of the BibTeX program in Common Lisp, with a BST-to-CL compiler. By Matthias Köppe
+BibTeX parser for Common Lisp.
 
-|---------+----------------------------------------------|
-| source  | git:https://github.com/mkoeppe/cl-bibtex.git |
-| commit  | 17a16f5                                      |
-| systems | bibtex                                       |
-|---------+----------------------------------------------|
+|---------+--------------------------------------------------|
+| source  | git:https://github.com/mkoeppe/cl-bibtex.git     |
+| commit  | 17a16f5                                          |
+| systems | bibtex                                           |
+|---------+--------------------------------------------------|
+
